fix header issue on mobile

--- a/wp-content/themes/quartersonking/css/layout.css
+++ b/wp-content/themes/quartersonking/css/layout.css
@@ -355,6 +355,12 @@ footer #social a:hover{
 }
 
 @media (max-width: 767px) {
+  header {
+    position: relative;
+  }
+  .home header {
+    position: absolute;
+  }
   .home .hero, .hero {
     height: auto;
   }
